--- a/src/blockchain_utilities/CMakeLists.txt
+++ b/src/blockchain_utilities/CMakeLists.txt
@@ -93,7 +93,7 @@ add_dependencies(blockchain_import
 	version)
 set_property(TARGET blockchain_import
 	PROPERTY
-	OUTPUT_NAME "graft-blockchain-import")
+	OUTPUT_NAME "cryptomy-blockchain-import")
 
 monero_add_executable(blockchain_export
   ${blockchain_export_sources}
@@ -115,5 +115,5 @@ add_dependencies(blockchain_export
 	version)
 set_property(TARGET blockchain_export
 	PROPERTY
-	OUTPUT_NAME "graft-blockchain-export")
+	OUTPUT_NAME "cryptomy-blockchain-export")
 
