--- a/scripts/public_testnet/conf.ini
+++ b/scripts/public_testnet/conf.ini
@@ -7,10 +7,10 @@ version=1.0F
 wallet_proxy_only=1
 
 [servant]
-bdb_path=/home/ubuntu/.graft/testnet
+bdb_path=/home/ubuntu/.cryptomy/testnet
 daemon_addr=localhost:28981
-stake_wallet_path=/home/ubuntu/project/GraftNetwork/scripts/public_testnet/stake_public_testnet_wallet
-miner_wallet_path=/home/ubuntu/project/GraftNetwork/scripts/public_testnet/miner_public_testnet_wallet
+stake_wallet_path=/home/ubuntu/project/CryptoMyNetwork/scripts/public_testnet/stake_public_testnet_wallet
+miner_wallet_path=/home/ubuntu/project/CryptoMyNetwork/scripts/public_testnet/miner_public_testnet_wallet
 is_testnet=true
 
 [fsn_hardcoded]
