--- a/contrib/snap/snapcraft.yaml
+++ b/contrib/snap/snapcraft.yaml
@@ -1,8 +1,8 @@
-name: graft
+name: cryptomy
 version: 0.10.2-1
-summary: "Graft Network: the secure, private, untraceable cryptocurrency https://www.graft.network"
+summary: "CryptoMy Network: the secure, private, untraceable cryptocurrency https://www.cryptomy.network"
 description: |
-    Graft Network is a private, secure, untraceable, decentralised digital currency.
+    CryptoMy Network is a private, secure, untraceable, decentralised digital currency.
     You are your bank, you control your funds, and nobody can trace your transfers
     unless you allow them to do so.
 grade: devel
@@ -16,9 +16,9 @@ apps:
         plugs:
             - network
             - network-bind
-    graft-wallet-rpc:
+    cryptomy-wallet-rpc:
         command: |
-          graft-wallet-rpc --log-file ${SNAP_USER_DATA}
+          cryptomy-wallet-rpc --log-file ${SNAP_USER_DATA}
         plugs:
             - home
             - network
