--- a/src/supernode/CMakeLists.txt
+++ b/src/supernode/CMakeLists.txt
@@ -34,7 +34,7 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 
 set(supernode_sources
     api/pending_transaction.cpp
-    graft_wallet.cpp
+    cryptomy_wallet.cpp
     wallet_args.cpp
     node_rpc_proxy.cpp
     AuthSample.cpp
@@ -54,7 +54,7 @@ set(supernode_sources
     supernode_common_struct.cpp
     supernode_rpc_command.cpp
     FSN_ServantBase.cpp
-    grafttxextra.cpp
+    cryptomytxextra.cpp
     TxPool.cpp
     supernode_helpers.cpp
     FSN_ActualList.cpp
@@ -64,8 +64,8 @@ set(supernode_api_headers)
 
 set(supernode_private_headers
     api/pending_transaction.h
-    graft_defines.h
-    graft_wallet.h
+    cryptomy_defines.h
+    cryptomy_wallet.h
     wallet_args.h
     wallet_errors.h
     node_rpc_proxy.h
